--- a/ParkCore/app/src/main/AndroidManifest.xml
+++ b/ParkCore/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Spots_Available"></activity>
+        <activity
+            android:name=".ParkingSpot"
+            android:label="@string/title_activity_parking_spot"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Spots_Available" />
         <activity android:name=".Destination" />
         <activity
             android:name=".MainActivity"
